RESOLVED FIXED114382
[wk2] REGRESSION: Find highlight does not update when the view is resized
https://bugs.webkit.org/show_bug.cgi?id=114382
Summary [wk2] REGRESSION: Find highlight does not update when the view is resized
Tim Horton
Reported 2013-04-10 13:54:53 PDT
I broke this a few weeks ago. <rdar://problem/13599797>
Attachments
patch (3.24 KB, patch)
2013-04-10 13:57 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2013-04-10 13:57:07 PDT
Tim Horton
Comment 2 2013-04-10 15:20:22 PDT
Note You need to log in before you can comment on or make changes to this bug.