[wk2] REGRESSION: Find highlight does not update when the view is resized https://bugs.webkit.org/show_bug.cgi?id=114382 <rdar://problem/13599797>

Reviewed by Simon Fraser.

Invalidate the page overlays from TiledCoreAnimationDrawingArea::updateGeometry.
This will have no effect if the page overlay hasn't previously asked to be painted
(as drawsContent will remain false on the layer).

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h:
(TiledCoreAnimationDrawingArea): Add invalidateAllPageOverlays.
* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::invalidateAllPageOverlays): Factor this out of didChangeScrollOffsetForAnyFrame.
(WebKit::TiledCoreAnimationDrawingArea::didChangeScrollOffsetForAnyFrame): Call invalidateAllPageOverlays.
(WebKit::TiledCoreAnimationDrawingArea::updateGeometry): Call invalidateAllPageOverlays.


Canonical link: https://commits.webkit.org/132758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148141 268f45cc-cd09-0410-ab3c-d52691b4dbfc